--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.env
 */config/development
 */logs/log-*.php
 !*/logs/index.html
@@ -6,6 +7,12 @@
 !*/cache/index.html
 !*/cache/.htaccess
 
+writable/*
+writable/log/*
+composer.lock
+composer.json
+
+.env
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
